# timesync

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.discord  PROJECT.md  README.md  docker-compose.override.yml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  handlers.rs  lib.rs  middleware.rs  routes.rs
crates/api/src/handlers/: availability.rs  discord.rs  schedule.rs
crates/api/src/middleware/: auth.rs  error_handling.rs
crates/api/src/routes/: availability.rs  discord.rs  health.rs  schedule.rs
crates/api/tests/: mod.rs  test_utils.rs
crates/api/tests/handlers/: availability_test.rs  discord_test.rs  middleware_test.rs  mod.rs  schedule_test.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  models.rs
crates/core/src/models/: discord.rs  schedule.rs  time_slot.rs
crates/core/tests/: errors_test.rs  models_test.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  mock.rs  models.rs  schema.rs
crates/db/src/mock/: repositories.rs
crates/db/src/repositories/: discord.rs  schedule.rs  time_slot.rs
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: commands.rs  config.rs  handlers.rs  lib.rs
crates/discord-bot/src/commands/: schedule.rs
crates/discord-bot/src/handlers/: schedule.rs
crates/discord-bot/tests/: commands_test.rs  config_test.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCKER.md
scripts/: run_migrations.rs
src/: availability.html  availability.js  db_migrate.rs  discord_bot.rs  edit.html  edit.js  index.html  main.rs  scripts.js  styles.css  view.html  view.js
